# urllib_gui

./: .bitrab-ci.yml  .gitignore  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  .pylintrc_tests  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  private_dictionary.txt  pyproject.toml  tox.ini
.bitrab-ci-scripts/: audit.sh  bandit.sh  build_docs.sh  build_package.sh  check_docs.sh  lint.sh  mypy.sh  precommit.sh  publish_pypi.sh  pytest.sh  setup.sh  smoke.sh
.github/: dependabot.yml
.github/workflows/: build.yml  publish_to_pypi.yml  release.yml  tox.yml
docs/: changelog.md  index.md  installation.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md  request-workflows.md
scripts/: basic_checks.sh  poc.py
spec/: remaining.md  spec.md
tests/: test_cli.py  test_client.py  test_export.py  test_renderer.py  test_storage.py
urllib_gui/: __about__.py  __init__.py  __main__.py  app.py  cli.py  client.py  main_window.py  model.py
urllib_gui/export/: __init__.py  curl.py  urllib_code.py
urllib_gui/render/: __init__.py  base.py  plain.py  plugins.py  source.py  stdlib_html.py
urllib_gui/storage/: __init__.py  app_config.py  bookmarks.py  config.py  history.py  saved_requests.py
urllib_gui/ui/: __init__.py  bookmarks_dialog.py  cookie_jar.py  history_dialog.py  preferences.py  request_panel.py  scratchpad.py  viewer.py
